@@ -3,28 +3,18 @@
 
 import io.gitlab.arturbosch.detekt.Detekt
 import io.gitlab.arturbosch.detekt.DetektCreateBaselineTask
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 buildscript {
-    // This logic is duplicated in the allprojects block: I don't know how to fix that.
     repositories {
-        gradle.mozconfig.substs.GRADLE_MAVEN_REPOSITORIES.each { repository ->
-            maven {
-                url = repository
-                if (gradle.mozconfig.substs.ALLOW_INSECURE_GRADLE_REPOSITORIES) {
-                    allowInsecureProtocol = true
-                }
-            }
-        }
+        gradle.configureMavenRepositories(delegate)
     }
 
     dependencies {
-        classpath libs.tools.androidgradle
-        classpath libs.tools.benchmarkgradle
+        classpath libs.android.gradle.plugin
+        classpath libs.androidx.benchmark.gradle
         classpath libs.androidx.navigation.safeargs
+        classpath libs.mozilla.glean.gradle.plugin
         classpath libs.osslicenses.plugin
-        classpath libs.glean.gradle.plugin
-        classpath "${ApplicationServicesConfig.groupId}:tooling-nimbus-gradle:${ApplicationServicesConfig.version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -32,115 +22,41 @@ buildscript {
 }
 
 plugins {
-    id 'ApkSizePlugin'
     id "mozac.ConfigPlugin"
+    alias(libs.plugins.dependency.analysis)
     alias(libs.plugins.detekt)
     alias(libs.plugins.kotlin.android) apply false
     alias(libs.plugins.kotlin.compose) apply false
     alias(libs.plugins.ksp)
 }
 
-allprojects {
-    // This logic is duplicated in the buildscript block: I don't know how to fix that.
-    repositories {
-        gradle.mozconfig.substs.GRADLE_MAVEN_REPOSITORIES.each { repository ->
-            maven {
-                url = repository
-                if (gradle.mozconfig.substs.ALLOW_INSECURE_GRADLE_REPOSITORIES) {
-                    allowInsecureProtocol = true
-                }
-            }
-        }
-
-        maven {
-            url = "${gradle.mozconfig.topobjdir}/gradle/maven"
-        }
-    }
-
-    tasks.withType(KotlinCompile).configureEach {
-        compilerOptions.allWarningsAsErrors = true
-    }
-}
-
-subprojects {
-    afterEvaluate {
-        if (it.hasProperty('kotlin')) {
-            kotlin {
-                jvmToolchain(config.jvmTargetCompatibility)
-            }
-        }
-
-        if (it.hasProperty('android')) {
-            android {
-                buildToolsVersion gradle.mozconfig.substs.ANDROID_BUILD_TOOLS_VERSION
-            }
-        }
-    }
-
-    project.configurations.configureEach {
-        // Dependencies can't depend on a different major version of Glean than A-C itself.
-        resolutionStrategy.eachDependency { details ->
-            if (details.requested.group == 'org.mozilla.telemetry'
-                    && details.requested.name.contains('glean') ) {
-                def requested = details.requested.version.tokenize(".")
-                    def defined = libs.versions.mozilla.glean.get().tokenize(".")
-                    // Check the major version
-                    if (requested[0] != defined[0]) {
-                        throw new AssertionError("Cannot resolve to a single Glean version. Requested: ${details.requested.version}, A-C uses: ${libs.versions.mozilla.glean.get()}")
-                    } else {
-                        // Enforce that all (transitive) dependencies are using the defined Glean version
-                        details.useVersion libs.versions.mozilla.glean.get()
-                    }
-            }
-        }
-
-        resolutionStrategy.capabilitiesResolution.withCapability("org.mozilla.telemetry:glean-native") {
-            def toBeSelected = candidates.find { it.id instanceof ModuleComponentIdentifier && it.id.module.contains('geckoview') }
-            if (toBeSelected != null) {
-                select(toBeSelected)
-            }
-            because 'use GeckoView Glean instead of standalone Glean'
-        }
-    }
-
-    tasks.withType(KotlinCompile).configureEach { task ->
-        // Translate Kotlin messages like "w: ..." and "e: ..." into
-        // "...: warning: ..." and "...: error: ...", to make Treeherder understand.
-        def listener = {
-
-            if (it.startsWith("e: warnings found")) {
-                return
-            }
-
-            if (it.startsWith('w: ') || it.startsWith('e: ')) {
-                def matches = (it =~ /([ew]): (.+):(\d+):(\d+) (.*)/)
-                if (!matches) {
-                    task.logger.quiet "kotlinc message format has changed!"
-                    if (it.startsWith('w: ')) {
-                        // For warnings, don't continue because we don't want to throw an
-                        // exception. For errors, we want the exception so that the new error
-                        // message format gets translated properly.
-                        return
-                    }
-                }
-                def (_, type, file, line, column, message) = matches[0]
-                type = (type == 'w') ? 'warning' : 'error'
-                // Use logger.lifecycle, which does not go through stderr again.
-                task.logger.lifecycle "$file:$line:$column: $type: $message"
-            }
-        } as StandardOutputListener
-
-        doFirst {
-            logging.addStandardErrorListener(listener)
-        }
-        doLast {
-            logging.removeStandardErrorListener(listener)
-        }
-    }
+mozilla {
+    ktlintSourcePaths = ["app/src/**/*.kt", "!**/build/**/*.kt"]
 }
 
 tasks.register('clean', Delete) {
     delete rootProject.layout.buildDirectory
+}
+
+dependencyAnalysis {
+    structure {
+        bundle("leakcanary") {
+            includeGroup("com.squareup.leakcanary")
+        }
+        bundle("mockk") {
+            includeGroup("io.mockk")
+        }
+        // Ignore Android KTX dependencies. See https://developer.android.com/kotlin/ktx#modules
+        //ignoreKtx(true)
+    }
+    issues {
+        all {
+            onAny {
+                // Fail the run if any issues are found (default = 'warn')
+                //severity('fail')
+            }
+        }
+    }
 }
 
 detekt {
@@ -170,6 +86,13 @@ tasks.withType(Detekt).configureEach() {
     exclude "**/build/**"
     exclude "**/resources/**"
     exclude "**/tmp/**"
+
+    reports {
+        custom {
+            reportId = "suppression-count"
+            outputLocation.set(file("$projectDir/build/reports/suppressions.txt"))
+        }
+    }
 }
 
 // Apply same path exclusions as for the main task
@@ -181,50 +104,12 @@ tasks.withType(DetektCreateBaselineTask).configureEach() {
     exclude "**/tmp/**"
 }
 
-configurations {
-    ktlint
-}
-
 dependencies {
-    ktlint(libs.ktlint) {
-        attributes {
-            attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
-        }
-    }
-
+    detekt project(":components:tooling-detekt")
     detekt project(":mozilla-detekt-rules")
-    detekt "io.gitlab.arturbosch.detekt:detekt-cli:${libs.versions.detekt.get()}"
+    detekt libs.detekt.cli
 }
 
-tasks.register('ktlint', JavaExec) {
-    group = "verification"
-    description = "Check Kotlin code style."
-    classpath = configurations.ktlint
-    mainClass.set("com.pinterest.ktlint.Main")
-    args "app/src/**/*.kt"
-    args "!**/build/**/*.kt"
-    args "--baseline=ktlint-baseline.xml"
-    args "--reporter=json,output=build/reports/ktlint/ktlint.json"
-    args "--reporter=plain"
-}
-
-tasks.register('ktlintFormat', JavaExec) {
-    description = "Fix Kotlin code style deviations."
-    classpath = configurations.ktlint
-    mainClass.set("com.pinterest.ktlint.Main")
-    args "-F"
-    args "app/src/**/*.kt"
-    args "!**/build/**/*.kt"
-    args "--baseline=ktlint-baseline.xml"
-    args "--reporter=json,output=build/reports/ktlint/ktlintFormat.json"
-    args "--reporter=plain"
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-}
-
-tasks.withType(Detekt.class).configureEach {
-    exclude("**/resources/**")
-    exclude("**/tmp/**")
-}
 
 tasks.register("listRepositories") {
     def reposData = project.provider {
